# goit-pyweb-14

./: alembic.ini  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: aba9c2f2cd70_init.py  aea5ec23f547_init.py  d1cf8cb56829_init.py  ee9a1324882b_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
